--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -9,4 +9,9 @@
         android:id="@+id/home"
         android:title="Home"
         android:icon="@drawable/ic_home_foreground"/>
+
+    <item
+        android:id="@+id/graph"
+        android:title="Graphs"
+        android:icon="@drawable/ic_graph_foreground"/>
 </menu>
