--- a/app/src/main/res/layout/activity_steps_graph.xml
+++ b/app/src/main/res/layout/activity_steps_graph.xml
@@ -1,42 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/yAxisTitle"-->
+    <!--        android:layout_width="15dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:textSize="20sp"-->
+    <!--        android:textColor="@color/black"-->
+    <!--        android:text="Steps"-->
+    <!--        android:rotation="-90"-->
+    <!--        android:textAlignment="center"/>-->
 
     <TextView
+        android:id="@+id/titleTV"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:textColor="@color/black"
-        android:textSize="35sp"
+        android:layout_height="50dp"
         android:text="Steps from"
         android:textAlignment="center"
-        android:id="@+id/titleTV"/>
+        android:textColor="@color/black"
+        android:textSize="35sp"
+        app:layout_constraintBottom_toTopOf="@+id/chart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
-    <LinearLayout
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-<!--        <TextView-->
-<!--            android:id="@+id/yAxisTitle"-->
-<!--            android:layout_width="15dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textSize="20sp"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:text="Steps"-->
-<!--            android:rotation="-90"-->
-<!--            android:textAlignment="center"/>-->
-
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/chart"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"/>
-
-    </LinearLayout>
+        android:layout_height="350dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
