--- a/app/src/main/res/layout/activity_steps_graph.xml
+++ b/app/src/main/res/layout/activity_steps_graph.xml
@@ -1,21 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:layout_gravity="center"
+    android:layout_gravity="center_vertical"
     android:orientation="vertical">
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/yAxisTitle"-->
-    <!--        android:layout_width="15dp"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:textSize="20sp"-->
-    <!--        android:textColor="@color/black"-->
-    <!--        android:text="Steps"-->
-    <!--        android:rotation="-90"-->
-    <!--        android:textAlignment="center"/>-->
 
     <TextView
         android:id="@+id/titleTV"
@@ -24,12 +16,19 @@
         android:text="Steps from"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/chart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginBottom="156dp" />
+        android:layout_width="390dp"
+        android:layout_height="403dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
